[package]
name = "rjs"
version = "0.1.0"
edition = "2018"
authors = ["Matt Peterson <mattpeterson@google.com>"]

[features]
debugmozjs = ['mozjs/debugmozjs']

[dependencies]
mozjs = {git = "https://github.com/servo/rust-mozjs"}
tokio-core = "0.1.6"
tokio-timer = "0.1.1"
futures = "0.1"
# concat_bytes = "0.1.0"
lazy_static = "1.0.0"
slab = "0.4.0"
downcast = "0.10.0"
glutin = "0.12.2"
gl = "0.10.0"
libc = "0.2.34"

[package.metadata.android]
label = "Using assets android-rs-glue example"
assets = "assets"
android_version = 18


